--- a/src/styles.scss
+++ b/src/styles.scss
@@ -220,6 +220,10 @@ border: none !important;
   background-color:#2E2E2E  ;
 }
 
+.mat-grid-tile-content {
+  height: fit-content;
+}
+
 /* Track */
 
 //scroll
