--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -39,9 +39,10 @@
     // font-size: 18px;
   }
   .share_btn{
+    max-height: 45px;
     background-color: #FF4E45;
     padding: 8px;
-    margin: 3px 0px;
+    margin: 12px 12px 20px 12px;
     margin-left: auto !important;
     border-radius: 24px;
     border: 0px;
