--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1126,3 +1126,9 @@ border: none !important;
 .text-primary {
   color: #007bff !important;
 }
+#disqus_thread p {
+  color: #FF4E45;
+}
+#disqus_thread a {
+  color: #FF4E45;
+}
