--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -62,7 +62,7 @@
                 <div class="user-info disFlex" routerLink="/auth/login">
                   <mat-icon>person</mat-icon><span>SignIn</span>
                 </div>
-                <div class="disFlex">
+                <div class="disFlex" routerLink="/auth/signUp">
                   <mat-icon>person_add</mat-icon><span>SignUp</span>
                 </div>
           </div>
