--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -131,10 +131,10 @@
   font-size: 14px;
 }
 
-.map {
-  // filter: grayscale(100%);    
-  // background-color:#FFFFFF80;     
-}
+// .map {
+//   // filter: grayscale(100%);    
+//   // background-color:#FFFFFF80;     
+// }
 
 .red_text{
   cursor: pointer;
