--- a/src/styles.scss
+++ b/src/styles.scss
@@ -224,6 +224,13 @@ border: none !important;
   height: fit-content;
 }
 
+/* Google map css */
+
+  .gm-style .gm-style-iw-c{
+    // background-color: #606060 !important;
+    color: #141414;
+  }
+
 /* Track */
 
 //scroll
