--- a/src/app/components/institution/institution.component.html
+++ b/src/app/components/institution/institution.component.html
@@ -1,27 +1,22 @@
-<!-- <p style="padding: 10px; color: white;">hello</p> -->
-  <!-- <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center" fxLayoutGap="25px">
-    <mat-card class="cards p-5" *ngFor="let member of members" fxFlex.gt-md="calc(33.33% - 25px)" fxFlex.md="calc(50% - 25px)" fxFlex.sm="calc(100% - 25px)">
-      <img mat-card-image [src]="member.url" alt="Photo of {{member.title}}" class="responsive-image">
-      <mat-card-content>
-        <mat-card-header>
-            <mat-card-title >{{member.title}}</mat-card-title>
-          </mat-card-header>
-      </mat-card-content>
-    </mat-card>
-  </div> -->
-  <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center" fxLayoutGap="25px">
-    <mat-card class="cards p-5" *ngFor="let member of members" fxFlex.gt-md="calc(33.33% - 25px)" fxFlex.md="calc(50% - 25px)" fxFlex.sm="calc(100% - 25px)">
-      <div class="card-container">
-        <img mat-card-image routerLink="/singleInstitute" [src]="member.url" alt="Photo of {{member.title}}" class="responsive-image">
-        <div class="overlay">
-            <mat-card-header>
-              <mat-card-title class="overlay-title">{{member.title}}</mat-card-title>
-            </mat-card-header>
+  <div class="home_container">
+    <div class="grid_list ">
+      <ng-container *ngFor="let list of members;let i=index">
+        <div class="col-12 card_style" style="border: 1px solid #fff;">
+          <mat-card class="" >
+            <div class="mr-2 cur_pointer" (click)="selectContinent(list)">
+              <div class="flex_align">
+                <img class="col-7" [src]="list.url" alt="Video Thumbnail">
+                <div class="mb-3">
+                  <p class="case_title flex_align">{{ list.title }}</p>
+                </div>
+              </div>
+            </div>
+          </mat-card>
         </div>
-      </div>
-    </mat-card>
+      </ng-container>
+    </div>
   </div>
-  <!-- image-cards.component.html -->
+ 
   
   
   
