--- a/src/app/components/institution/institution.component.scss
+++ b/src/app/components/institution/institution.component.scss
@@ -1,5 +1,47 @@
 /* app.component.css */
 
+.home_container{
+    color: #fff !important;
+    padding: 18px 48px;
+}
+
+.grid_list{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+  }
+
+  .flex_align{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.case_title{
+    font-size: 14px;
+    color: white;
+    font-weight: 600;
+    margin: 5px 0px 5px 0px;
+  }
+
+  .card_style :hover{
+    // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    // border: 1px solid #FF4E45;
+    // background-color: #fff;
+    // color: #000 !important;
+    .case_title{
+    //     color: #000 !important;
+    border: none;
+    }
+    img{
+        border: none;
+    }
+}
+  
+  .cur_pointer{
+    cursor: pointer !important;
+  }
+
 // .card-container {
 //     display: flex;
 //     flex-wrap: wrap;
