setting comment box and chat box seperately

--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -1,31 +1,33 @@
 <div class="grid-container p-5">
-    <div class="big-column">
-        <!-- <img width="" src="../../assets/map_vc.svg" alt="Video Thumbnail"> -->
+  <div class="big-column">
+    <!-- <img width="" src="../../assets/map_vc.svg" alt="Video Thumbnail"> -->
 
-        <div class="recommend-cards">
-          <!-- <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)"> -->
-            <!-- {{current_case_dtls.youtubeUrl}} width="560" -->
-            <!-- <iframe style="width: 100%;" height="400" src="https://www.youtube.com/embed/1ozGKlOzEVc" frameborder="0" allowfullscreen></iframe> -->
-            <iframe style="width: 100%;" height="600" [src]= "videoURL"frameborder="0" allowfullscreen></iframe>
-            <!-- <img [src]="current_case_dtls.thumbnail" style="width: 100%;" alt="Video Thumbnail"> -->
-            <div class="ml-3 mt-3">
-              <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.title }}</p>
-              <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ current_case_dtls.createdAt | date:'longDate' }}</p>
-            </div>
-         
-          <!-- </div> -->
-        </div>
-        <div class="ml-3 mt-5" style="display: flex;">
-          <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
-          <div class="ml-2"  style="display: block;">
-            <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.institution.name }}</p>
-            <p style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.institution.city}}, {{current_case_dtls.institution.country}} </p>
-          </div>
-          <button class="share_btn" (click)="share()">
-            <mat-icon class="ml-2" style="color: #fff">share</mat-icon>
-            <span class="mt-1 mr-2 ml-1" style="color: #fff;">SHARE</span>
-          </button>
-            <!-- <button class="share_btn" (click)="onShareButtonClick()">
+    <div class="recommend-cards">
+      <!-- <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)"> -->
+      <!-- {{current_case_dtls.youtubeUrl}} width="560" -->
+      <!-- <iframe style="width: 100%;" height="400" src="https://www.youtube.com/embed/1ozGKlOzEVc" frameborder="0" allowfullscreen></iframe> -->
+      <iframe style="width: 100%;" height="600" [src]="videoURL" frameborder="0" allowfullscreen></iframe>
+      <!-- <img [src]="current_case_dtls.thumbnail" style="width: 100%;" alt="Video Thumbnail"> -->
+      <div class="ml-3 mt-3">
+        <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.title }}</p>
+        <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ current_case_dtls.createdAt | date:'longDate' }}
+        </p>
+      </div>
+
+      <!-- </div> -->
+    </div>
+    <div class="ml-3 mt-5" style="display: flex;">
+      <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
+      <div class="ml-2" style="display: block;">
+        <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.institution.name }}</p>
+        <p style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.institution.city}},
+          {{current_case_dtls.institution.country}} </p>
+      </div>
+      <button class="share_btn" (click)="share()">
+        <mat-icon class="ml-2" style="color: #fff">share</mat-icon>
+        <span class="mt-1 mr-2 ml-1" style="color: #fff;">SHARE</span>
+      </button>
+      <!-- <button class="share_btn" (click)="onShareButtonClick()">
                 <mat-icon class="ml-2" style="color: #fff">share</mat-icon>
                 <span class="mt-1 mr-2 ml-1" style="color: #fff;">SHARE</span>
             </button>
@@ -40,9 +42,9 @@
                 description="dhanasekar instagram" twitterAccount="rodrigokamada" class="pt-5">
             </share-buttons>
         </div> -->
-        </div>
+    </div>
 
-        <!-- <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
+    <!-- <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
           <mat-expansion-panel-header>
             <mat-panel-title style="font-weight: 500;">
               Description
@@ -53,28 +55,38 @@
           <p class="des_text">{{current_case_dtls.description}}</p>
           
         </mat-expansion-panel> -->
-        <disqus [identifier]="pageId" ></disqus>
 
-        <!-- <div id="hyvor-talk-comments"></div> -->
-        <!-- <hyvor-talk-comments website-id="10253" page-id="" id="comments-container"></hyvor-talk-comments> -->
-        <!-- <Comment website-id="10253" page-id="" id="comments-container"></Comment> -->
+    <!-- llllllllllllllllll -->
+    <!-- <disqus [identifier]="pageId" ></disqus> -->
+    <div *ngIf="!isScheduleCase && !hideCommentBox">
+      <disqus [identifier]="pageId"></disqus>
     </div>
-  
-    <div class="small-column">
-        <img width="" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
+    <!-- <disqus [identifier]="pageId" *ngIf="showCommentBox"></disqus> -->
 
-
-      <div class="recommend-cards">
-        <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)">
-            <img [src]="video.thumbnail" style="width: 100%;" alt="Video Thumbnail">
-          <div class="ml-3">
-            <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ video.title }}</p>
-            <p style="color: #FFFFFF80;
-            ;font-weight: 600;">{{'Week of'}} {{ video.createdAt | date:'longDate' }}</p>
-          </div>
-       
-        </div>
-      </div>
-      <app-chat [pageId]="pageId"/>
-    </div>
+    <!-- <div id="hyvor-talk-comments"></div> -->
+    <!-- <hyvor-talk-comments website-id="10253" page-id="" id="comments-container"></hyvor-talk-comments> -->
+    <!-- <Comment website-id="10253" page-id="" id="comments-container"></Comment> -->
   </div>
+
+  <div class="small-column">
+    <img width="" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
+
+
+    <div class="recommend-cards">
+      <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)">
+        <img [src]="video.thumbnail" style="width: 100%;" alt="Video Thumbnail">
+        <div class="ml-3">
+          <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ video.title }}</p>
+          <p style="color: #FFFFFF80;
+            ;font-weight: 600;">{{'Week of'}} {{ video.createdAt | date:'longDate' }}</p>
+        </div>
+
+      </div>
+    </div>
+    <!-- <app-chat [pageId]="pageId"/> -->
+    <div *ngIf="!hideChat">
+      <app-chat [pageId]="pageId"></app-chat>
+    </div>
+
+  </div>
+</div>
