--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,19 +37,18 @@
       <div class="col-12 schedule_flex" role="listbox">
         <iframe class="map col-7" style="border:0;height: 70vh;" [src]="mapURL" frameborder="0"
           allowfullscreen></iframe>
-        <!-- <img class="col-7 mb-2" src="{{ topVideosList[0].thumbnail}}" alt="slide" > -->
         <div class="col-5 ml-3">
-          <img class="mb-2 col-12" src="{{ scheduleVideo[0].thumbnail}}" alt="slide">
-          <p>{{scheduleVideo[0].title}}</p>
-          <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ scheduleVideo[0].createdAt | date:'longDate'
+          <img class="mb-2 col-12" src="{{ scheduleVideo.thumbnail}}" alt="slide">
+          <p>{{scheduleVideo.title}}</p>
+          <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ scheduleVideo.createdAt | date:'longDate'
             }}</p>
           <div class="" style="display: flex;">
             <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
             <div class="ml-2" style="display: block;">
-              <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{scheduleVideo[0].institution && scheduleVideo[0].institution.name }}
+              <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{scheduleVideo.institution ? scheduleVideo.institution.name:'N/A' }}
               </p>
-              <p style="color: #FFFFFF80;;font-weight: 600;">{{scheduleVideo[0].institution ? scheduleVideo[0].institution.city:'null'}},
-                {{scheduleVideo[0].institution ? scheduleVideo[0].institution.country:'null'}} </p>
+              <p style="color: #FFFFFF80;;font-weight: 600;">{{scheduleVideo.institution ? scheduleVideo.institution.city:'N/A'}},
+                {{scheduleVideo.institution ? scheduleVideo.institution.country:'N/A'}} </p>
             </div>
           </div>
         </div>
