UI changes and navbar search field only for all cases

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,7 +28,7 @@
                         uppercase}}</button>
                 </div>
                 <a class="header forgot_text mb-3" routerLink="/auth/forgetpassword">Forget password?</a>
-                <p class="header sign_up_text">New here? <a style="text-decoration: underline;" routerLink="/auth/signUp">Click here</a> to Sign Up! </p>
+                <p class="header sign_up_text">New here? <a style="text-decoration: underline; color:#FF4E45;" routerLink="/auth/signUp">Click here</a> to Sign Up! </p>
             </form>
         </div>
     </div>
