--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
 <div class="home_container">
   <div class="get_started">
     <div class="">
-      <img class="col-12 cur_pointer" routerLink="/user/landing" src="../../assets/home_img.svg" alt="">
+      <img class="col-12 cur_pointer" routerLink="/user/landing" src="../../assets/home_img1.svg" alt="">
     </div>
   </div>
 
