--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -39,6 +39,7 @@
     // font-size: 18px;
   }
   .share_btn{
+    height: 50%;
     background-color: #FF4E45;
     padding: 8px;
     margin: 3px 0px;
