--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -4,7 +4,7 @@
   right: 0;
   width: 400px;
   height: 70%;
-  background-color: white;
+  background-color: #141414;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -12,6 +12,7 @@
 }
 
 .messages {
+  color: #fff;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -52,7 +53,7 @@
 
 .input-wrapper {
   display: flex;
-  border: 1px solid #ddd;
+  border: 1px solid #d12f2f;
   border-radius: 25px;
   padding: 10px;
 }
@@ -64,7 +65,7 @@ input[type="text"] {
 }
 
 button {
-  background-color: #25d366;
+  background-color: #FF4E45;
   color: white;
   border: none;
   border-radius: 50%;
@@ -85,8 +86,8 @@ button {
 }
 
 .chat-container.minimized {
-  width: auto; 
-  height: auto; 
+  width: auto;
+  height: auto;
   overflow: hidden;
 }
 
@@ -103,13 +104,28 @@ button {
 }
 
 .live-chat-heading {
-  background-color: #f0f0f0; 
+  background-color: #141414;
+  color: #fff;
   padding: 10px;
-  border-bottom: 2px solid #ccc; 
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border-bottom: 2px solid #FF4E45;
+  box-sizing: border-box;
 }
 
-.live-chat-heading h1 {
-  margin: 0; 
-  font-size: 24px;
-  color: #333;
+
+
+.live-chat-heading i.material-icons {
+  margin-right: 8px;
+}
+
+.input-container input {
+  background-color: #141414;
+  color: #fff;
+  padding: 8px 10px;
+  width: calc(100% - 50px);
+  box-sizing: border-box;
 }
