live chat design change

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,8 +1,4 @@
-<div class="chat-container" [ngClass]="{'minimized': isMinimized}">
-    <div class="toggle-icon" (click)="toggleChat()">
-        <i class="material-icons">{{ isMinimized ? 'expand_more' : 'expand_less' }}</i>
-    </div>
-
+<div class="chat-container" >
     <div class="live-chat-heading">
         <i class="material-icons">message</i>LIVE CHAT
     </div>
