--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,15 +1,15 @@
 .chat-container {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 400px;
-  height: 70%;
+  width: auto;
+  height: 600px;
   background-color: #141414;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
   display: flex;
   flex-direction: column;
-  border-radius: 20px;
+  border-radius: 20px; 
+  border: 2px solid #2c2c2c; 
+  margin-bottom: 10px;
 }
+
 
 .messages {
   color: #fff;
@@ -85,16 +85,6 @@ button {
   align-self: flex-start;
 }
 
-.chat-container.minimized {
-  width: auto;
-  height: auto;
-  overflow: hidden;
-}
-
-.chat-container.minimized .messages,
-.chat-container.minimized .input-container {
-  display: none;
-}
 
 .toggle-icon {
   position: absolute;
@@ -106,7 +96,7 @@ button {
 .live-chat-heading {
   background-color: #141414;
   color: #fff;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   display: flex;
   align-items: center;
