--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -119,3 +119,11 @@ button {
   width: calc(100% - 50px);
   box-sizing: border-box;
 }
+
+.NotLogin {
+  background-color: #141414;
+  color: #fff;
+  padding: 8px 10px;
+  width: calc(100% - 50px);
+  box-sizing: border-box;
+}
