--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -149,10 +149,10 @@
   <div class="widget_accordion">
     <div class="media_list">
       <h6 class="mr-auto">FOLLOW US ON ALL SOCIAL FORUMS TO STAY CONNECTED</h6>
-      <fa-icon [icon]="facebook" class="icon"></fa-icon>
-      <fa-icon [icon]="instagram" class="icon"></fa-icon>
-      <fa-icon [icon]="twitterX" class="icon"></fa-icon>
-      <fa-icon [icon]="linkedIn" class="icon"></fa-icon>
+      <a href="https://www.facebook.com/profile.php?id=100087182070692" target="_blank"><fa-icon [icon]="facebook" class="icon"></fa-icon></a>
+      <a href="https://www.instagram.com/medstream360/" target="_blank"><fa-icon [icon]="instagram" class="icon"></fa-icon></a>
+      <a href="https://twitter.com/MedStream360" target="_blank"><fa-icon [icon]="twitterX" class="icon"></fa-icon></a>
+      <a href="https://www.linkedin.com/in/medstream360/" target="_blank"><fa-icon [icon]="linkedIn" class="icon"></fa-icon></a>
     </div>
 
   </div>
